tests/rosetta/out/Smalltalk/averages-pythagorean-means.out
/tmp/averages-pythagorean-means.st:6: parse error, expected ']'
